--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~44.0.0",
+    "expo": "^44.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react-hook-form": "^7.28.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-44.0.0.tar.gz",
     "react-native-web": "0.17.1",
     "styled-components": "^5.3.3"
   },
